Fix layout issues in mobile Safari. Use .subheader as class that doesn't get post-header margin instead of details. Fix height on items in Safari by setting flex-basis to auto rather than 100%

--- a/website/assets/sass/_layout.scss
+++ b/website/assets/sass/_layout.scss
@@ -63,7 +63,7 @@ section.columnar {
         > div, > section {
             display: block;
             min-height: 240px;
-            @include flex(1 0 100%);
+            @include flex(1 0 auto);
             margin-bottom: $medium-spacing;
 
             &:last-of-type {
