--- a/website/assets/sass/main.scss
+++ b/website/assets/sass/main.scss
@@ -355,7 +355,7 @@ header.decorated {
         }
     }
 
-    + :not(.featured, .details) {
+    + :not(.featured, .subheader) {
         margin-top: 50px;
     }
 
